# nRF5-cmake-scripts

./: .gitattributes  .gitignore  LICENSE  SDKPatchApply  SDKPatchCleanupAfterBadApply  SDKPatchCorrectNewlines  SDKPatchCreate  changelog.md  nRF5-cmake-toolchain.cmake  nRF5-cmake.cmake  readme.md  runJLinkExe  runJLinkExe.ps1  runJLinkGDBServer  runJLinkGDBServer.ps1  runJLinkRTTClient  runJLinkRTTClient.ps1  versions.cmake  versions.sh
example/: CMakeLists.txt  README.md
example/src/: CMakeLists.txt
gdb/: gdb-hooks.gdb
includes/: elfFlash  getSizes  libraries.cmake  makefile_vars.cmake  secure_bootloader.cmake  uECC-dl.txt.in  uECC.cmake  utils.cmake
ozone/: nRF52832_xxAA.jdebug
sdk/: nRF5_SDK_17.1.0_ddde560.patch  nrf5SDKforMeshv400src.patch  nrf5SDKforMeshv420src.patch  nrf5SDKforMeshv500src.patch
